<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_ApagadoCintas" Id="{405d3be8-2886-470d-a3cd-d9d8aa5b7439}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM FB_ApagadoCintas
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF POU_Contadores.iCintaProcesando = 0 THEN
	GVL_General.sBeltConveyor.bCintaAzul1 	:= FALSE;
	GVL_General.sBeltConveyor.bCintaVerde1	:= FALSE;
	GVL_General.sBeltConveyor.bCintaMetal1 	:= FALSE;
	GVL_General.sBeltConveyor.bCintaAzul2 	:= FALSE;
	GVL_General.sBeltConveyor.bCintaVerde2 	:= FALSE;
	GVL_General.sBeltConveyor.bCintaMetal2 	:= FALSE;
	GVL_General.sBeltConveyor.bSortingCintaDistribucion := FALSE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_ApagadoCintas">
      <LineId Id="6" Count="7" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>